--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,10 @@ h3 {
 	gap: 2rem;
 }
 
-aside {
+/* aside {
 	margin-top: 5rem;
-}
+} */
+
 aside ul {
 	list-style: none;
 	margin: 0;
@@ -81,7 +82,7 @@ aside ul {
 }
 
 aside li {
-	padding: 1.3rem;
+	padding: 1rem;
 }
 
 aside a {
@@ -90,8 +91,11 @@ aside a {
 	font-weight: 400;
 }
 
-aside a:active {
-	border-left: 1px solid #f40082;
+.selected {
+	border-left: 3px solid #f40082;
+}
+
+.selected a {
 	color: #f40082;
 	font-weight: 700;
 }
@@ -105,6 +109,8 @@ aside a:active {
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
 	padding-left: 1.3rem;
+	margin-top: 5rem;
+	margin-bottom: 2.5rem;
 }
 
 .image-text-wrapper {
@@ -113,14 +119,25 @@ aside a:active {
 	justify-content: space-between;
 }
 .image-text-wrapper__image {
-	align-self: flex-start;
+	align-self: center;
+	width: 50%;
 }
 .image-text-wrapper__content {
 	align-self: flex-start;
+	font-size: 1rem;
+	margin: 0;
+}
+
+.image-text-wrapper__content p {
+	margin-top: 0;
 }
 
 .image {
-	width: 100%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	gap: 0.3rem;
+	width: 90%;
 	font-size: 12px;
 	color: gray;
 	text-align: center;
